package dev.fizlrock.todo.domain.exception;

/** TodoAppException */
public abstract class TodoAppException extends RuntimeException {}
